--- a/po/fi.po
+++ b/po/fi.po
@@ -1,15 +1,15 @@
 # Translation of xfce4-panel into Finnish.
 # Copyright (C) 2002-2006 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
-# Ilkka Ollakka <ilkka.ollakka@iki.fi>, 2003
-# Jari Rahkonen <jari.rahkonen@pp1.inet.fi>, 2005.
+# Ilkka Ollakka <ilkka.ollakka@iki.fi>, 2003.
+# Jari Rahkonen <jari.rahkonen@pp1.inet.fi>, 2005-2006.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.28\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-02-11 22:08+0100\n"
-"PO-Revision-Date: 2005-09-29 20:27+0900\n"
+"PO-Revision-Date: 2006-02-12 13:40+0200\n"
 "Last-Translator: Jari Rahkonen <jari.rahkonen@pp1.inet.fi>\n"
 "Language-Team: Finnish <translation-team-fi@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -20,12 +20,12 @@ msgstr ""
 #: ../libxfce4panel/xfce-panel-external-item.c:177
 #, c-format
 msgid "An item was unexpectedly removed: \"%s\"."
-msgstr ""
+msgstr "Osa poistettiin odottamatta: \"%s\""
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:572
-#, fuzzy, c-format
+#, c-format
 msgid "Remove \"%s\"?"
-msgstr "Poista osa %s?"
+msgstr "Poistetaanko \"%s\"?"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:575 ../panel/panel-app.c:702
 #: ../panel/panel-app.c:734 ../panel/panel-app.c:767
@@ -37,7 +37,7 @@ msgstr "Xfce paneeli"
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:577
 msgid ""
 "The item will be removed from the panel and its configuration will be lost."
-msgstr ""
+msgstr "Tämä osa poistetaan paneelista ja sen asetukset menetetään."
 
 #. configure, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:732
@@ -47,82 +47,74 @@ msgstr ""
 #: ../plugins/systray/systray.c:360 ../plugins/tasklist/tasklist.c:398
 #: ../plugins/windowlist/windowlist.c:465
 msgid "Properties"
-msgstr ""
+msgstr "Ominaisuudet"
 
 #. about item, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:749
 msgid "About"
-msgstr ""
+msgstr "Tietoja"
 
 #. move
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:762
-#, fuzzy
 msgid "Move"
-msgstr "Poista osa %s?"
+msgstr "Siirrä"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:784
-#, fuzzy
 msgid "Remove"
-msgstr "Poista osa %s?"
+msgstr "Poista"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:801
-#, fuzzy
 msgid "Add New Item"
-msgstr "Uusi osa"
+msgstr "Lisää uusi osa"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:813 ../panel/panel.c:628
 msgid "Customize Panel"
-msgstr ""
+msgstr "Mukauta paneelia"
 
 #: ../panel/panel.c:639 ../panel/panel-dialogs.c:600
 msgid "Add Items"
-msgstr ""
+msgstr "Lisää osia"
 
 #: ../panel/panel.c:654 ../plugins/actions/actions.c:350
 msgid "Quit"
-msgstr ""
+msgstr "Lopeta"
 
 #: ../panel/panel.c:664
-#, fuzzy
 msgid "Restart"
-msgstr "Pala_uta"
+msgstr "Käynnistä uudelleen"
 
 #: ../panel/panel.c:678
-#, fuzzy
 msgid "About the Xfce Panel"
-msgstr "Xfce paneeli"
+msgstr "Tietoja Xfce:n paneelista"
 
 #: ../panel/panel-item-manager.c:357 ../panel/panel-item-manager.c:365
-#, fuzzy, c-format
+#, c-format
 msgid "Could not open \"%s\" module"
-msgstr ""
-"Kohteen \"%s\" suoritus epäonnistui:\n"
-"%s"
+msgstr "Moduulin \"%s\" avaaminen epäonnistui"
 
 #: ../panel/panel-app.c:215 ../panel/panel-app.c:704
-#, fuzzy
 msgid "Exit Xfce Panel?"
-msgstr "Xfce paneeli"
+msgstr "Poistutaanko Xfce:n paneelista?"
 
 #: ../panel/panel-app.c:705
 msgid "You can't remove the last panel. Would you like to exit the program?"
-msgstr ""
+msgstr "Et voi poistaa ainoaa paneelia. Haluatko sulkea sovelluksen?"
 
 #: ../panel/panel-app.c:732
 #, c-format
 msgid "Remove Panel \"%d\"?"
-msgstr ""
+msgstr "Poistetaanko paneeli \"%d\"?"
 
 #: ../panel/panel-app.c:736
 msgid "The selected panel and all its items will be removed."
-msgstr ""
+msgstr "Valittu paneeli ja kaikki sen osat poistetaan."
 
 #: ../panel/panel-app.c:775
 msgid "Developer"
 msgstr "Kehittäjä"
 
 #: ../panel/main.c:46
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "\n"
 " Xfce Panel %s\n"
@@ -134,8 +126,7 @@ msgid ""
 "\n"
 msgstr ""
 "\n"
-" Xfce paneeli\n"
-" Versio %s\n"
+" Xfce paneeli %s\n"
 "\n"
 " Xfce-työpöytäympäristön osa\n"
 " http://www.xfce.org\n"
@@ -149,6 +140,8 @@ msgid ""
 " Usage: %s [OPTIONS]\n"
 "\n"
 msgstr ""
+" Käyttö: %s [VALITSIMET]\n"
+"\n"
 
 #. Only translate the descriptions, not the options itself
 #: ../panel/main.c:55
@@ -164,62 +157,70 @@ msgid ""
 " -a, --add       Add new items\n"
 "\n"
 msgstr ""
+" OPTIONS\n"
+" -h, --help      Näytä tämä viesti ja poistu\n"
+" -v, --version   Näytä tämä viesti ja poistu\n"
+" -c, --customize Näytä asetusdialogi\n"
+" -s, --save      Tallenna asetukset\n"
+" -r, --restart   Käynnistä paneelit uudelleen\n"
+" -q, --quit      Lopeta istunto\n"
+" -x, --exit      Sulje kaikki paneelit ja poistu sovelluksesta\n"
+" -a, --add       Lisää uusia osia\n"
+"\n"
 
 #: ../panel/panel-dialogs.c:615
 msgid ""
 "Drag items from the list to a panel or remove them by dragging them back to "
 "the list."
 msgstr ""
+"Raahaa kohteita listalta paneeliin tai poista niitä raahaamalla takaisin "
+"listan päälle."
 
 #: ../panel/panel-dialogs.c:628
+#, fuzzy
 msgid "Available Items"
-msgstr ""
+msgstr "Käytettävissä olevat osat"
 
 #: ../panel/panel-dialogs.c:836 ../panel/panel-dialogs.c:1059
-#, fuzzy
 msgid "Normal Width"
-msgstr "Täysi leveys:"
+msgstr "Normaali leveys"
 
 #: ../panel/panel-dialogs.c:838 ../panel/panel-dialogs.c:1061
-#, fuzzy
 msgid "Full Width"
-msgstr "Täysi leveys:"
+msgstr "Täysi leveys"
 
 #: ../panel/panel-dialogs.c:844 ../panel/panel-dialogs.c:1067
-#, fuzzy
 msgid "Span Monitors"
-msgstr "Editori"
+msgstr "Levitä kaikille näytöille"
 
 #: ../panel/panel-dialogs.c:904 ../panel/panel-dialogs.c:1132
 msgid "Left"
-msgstr ""
+msgstr "Vasemmalla"
 
 #: ../panel/panel-dialogs.c:906 ../panel/panel-dialogs.c:1134
 msgid "Right"
-msgstr ""
+msgstr "Oikealla"
 
 #: ../panel/panel-dialogs.c:911 ../panel/panel-dialogs.c:1139
 msgid "Top"
-msgstr ""
+msgstr "Ylhäällä"
 
 #: ../panel/panel-dialogs.c:913 ../panel/panel-dialogs.c:1141
 msgid "Bottom"
-msgstr ""
+msgstr "Alhaalla"
 
 #. floating?
 #: ../panel/panel-dialogs.c:941
-#, fuzzy
 msgid "Panel Type"
-msgstr "Paneelin koko:"
+msgstr "Paneelin tyyppi"
 
 #: ../panel/panel-dialogs.c:950
-#, fuzzy
 msgid "Fixed Position"
-msgstr "Sijainti"
+msgstr "Kiinteä"
 
 #: ../panel/panel-dialogs.c:956
 msgid "Freely Moveable"
-msgstr ""
+msgstr "Liikuteltava"
 
 #. position
 #: ../panel/panel-dialogs.c:967
@@ -227,12 +228,10 @@ msgid "Position"
 msgstr "Sijainti"
 
 #: ../panel/panel-dialogs.c:1075
-#, fuzzy
 msgid "Auto_hide"
-msgstr "Piilota automaattisesti"
+msgstr "_Piilota automaattisesti"
 
 #: ../panel/panel-dialogs.c:1093
-#, fuzzy
 msgid "Orientation:"
 msgstr "Paneelin suunta:"
 
@@ -245,18 +244,16 @@ msgid "Vertical"
 msgstr "Pysty"
 
 #: ../panel/panel-dialogs.c:1116
-#, fuzzy
 msgid "Handle:"
-msgstr "Sijainti"
+msgstr "Kahva:"
 
 #: ../panel/panel-dialogs.c:1128
 msgid "At both sides"
 msgstr "Molemmissa päissä"
 
 #: ../panel/panel-dialogs.c:1201
-#, fuzzy
 msgid "Select Monitor"
-msgstr "Editori"
+msgstr "Valitse näyttö"
 
 #. size
 #: ../panel/panel-dialogs.c:1314 ../plugins/tasklist/tasklist.c:431
@@ -285,44 +282,37 @@ msgstr "Täysi"
 
 #: ../panel/panel-dialogs.c:1416 ../panel/panel-dialogs.c:1454
 #: ../panel/panel-dialogs.c:1479
-#, fuzzy, c-format
+#, c-format
 msgid "Panel %d"
-msgstr "Xfce paneeli"
+msgstr "Paneeli %d"
 
 #: ../panel/panel-dialogs.c:1500
-#, fuzzy
 msgid "Remove Panel"
-msgstr "Poista osa %s?"
+msgstr "Poista paneeli"
 
 #: ../panel/panel-dialogs.c:1513
-#, fuzzy
 msgid "New Panel"
-msgstr "Xfce paneeli"
+msgstr "Lisää paneeli"
 
 #: ../panel/panel-dialogs.c:1597
-#, fuzzy
 msgid "Panel Manager"
-msgstr "Paneelin koko:"
+msgstr "Paneelien hallinta"
 
 #: ../plugins/actions/actions.c:325
-#, fuzzy
 msgid "Panel Actions"
-msgstr "Paneelin asetukset"
+msgstr "Paneelin toiminnot"
 
 #: ../plugins/actions/actions.c:342
-#, fuzzy
 msgid "Select action type:"
-msgstr "Valitse komento"
+msgstr "Valitse toimintotyyppi:"
 
 #: ../plugins/actions/actions.c:351
-#, fuzzy
 msgid "Lock screen"
-msgstr "Lu_kitse näyttö"
+msgstr "Lukitse näyttö"
 
 #: ../plugins/actions/actions.c:352
-#, fuzzy
 msgid "Quit + Lock screen"
-msgstr "Lu_kitse näyttö"
+msgstr "Lopeta + lukitse näyttö"
 
 #. Use format characters from strftime(3)
 #. * to get the proper string for your locale.
@@ -337,9 +327,8 @@ msgid "%A %d %B %Y"
 msgstr "%A %d.%m.%Y"
 
 #: ../plugins/clock/clock.c:424 ../plugins/clock/clock.desktop.in.in.h:1
-#, fuzzy
 msgid "Clock"
-msgstr "Lukitse"
+msgstr "Kello"
 
 #: ../plugins/clock/clock.c:431
 msgid "Appearance"
@@ -359,49 +348,41 @@ msgid "LED"
 msgstr "LED"
 
 #: ../plugins/clock/clock.c:453 ../plugins/systray/systray.c:389
-#, fuzzy
 msgid "Show _frame"
-msgstr "Näytä _aika"
+msgstr "Näytä _kehys"
 
 #: ../plugins/clock/clock.c:461
 msgid "Clock Options"
-msgstr ""
+msgstr "Kellon asetukset"
 
 #: ../plugins/clock/clock.c:471
 msgid "Use 24-_hour clock"
-msgstr ""
+msgstr "24-t_untinen kello"
 
 #: ../plugins/clock/clock.c:479
-#, fuzzy
 msgid "Show AM/PM"
-msgstr "AM/PM"
+msgstr "Näytä AM/PM"
 
 #: ../plugins/clock/clock.c:487
-#, fuzzy
 msgid "Display seconds"
-msgstr "Näytä aika ennen kuvakkeita"
+msgstr "Näytä sekunnit"
 
 #: ../plugins/iconbox/iconbox.c:808
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:1
-#, fuzzy
 msgid "Icon Box"
 msgstr "Kuvakelaatikko"
 
 #: ../plugins/iconbox/iconbox.c:822
-#, fuzzy
 msgid "Only show minimized applications"
-msgstr "Näytä vain _pienennetyt sovellukset"
+msgstr "Näytä vain pienennetyt sovellukset"
 
 #: ../plugins/launcher/launcher.c:318 ../plugins/launcher/launcher.c:367
-#, fuzzy, c-format
+#, c-format
 msgid "Could not run \"%s\""
-msgstr ""
-"Kohteen \"%s\" suoritus epäonnistui:\n"
-"%s"
+msgstr "Kohdetta \"%s\" ei voitu suorittaa"
 
 #: ../plugins/launcher/launcher.c:578 ../plugins/launcher/launcher.c:1157
 #: ../plugins/launcher/launcher-dialog.c:1121
-#, fuzzy
 msgid "New Item"
 msgstr "Uusi osa"
 
@@ -423,7 +404,7 @@ msgstr "Tiedostonhallinta"
 
 #: ../plugins/launcher/launcher-dialog.c:81
 msgid "Utilities"
-msgstr "Sekalaiset"
+msgstr "Varusohjelmat"
 
 #: ../plugins/launcher/launcher-dialog.c:82
 msgid "Games"
@@ -502,9 +483,8 @@ msgstr ""
 "valikossa."
 
 #: ../plugins/launcher/launcher-dialog.c:1298
-#, fuzzy
 msgid "Program Launcher"
-msgstr "Käynnistin"
+msgstr "Sovelluskäynnistin"
 
 #: ../plugins/launcher/launcher-dialog.c:1633
 msgid "Select file"
@@ -512,7 +492,7 @@ msgstr "Valitse tiedosto"
 
 #: ../plugins/pager/pager.c:314 ../plugins/pager/pager.desktop.in.in.h:2
 msgid "Pager"
-msgstr "Työpöydän vaihtaja"
+msgstr "Työtilan vaihtaja"
 
 #: ../plugins/pager/pager.c:334
 msgid "Number of rows:"
@@ -528,21 +508,20 @@ msgid "Separator"
 msgstr "Erotin"
 
 #: ../plugins/separator/separator.c:284
-#, fuzzy
 msgid "_Draw Separator"
-msgstr "Erotin"
+msgstr "_Piirrä erotin"
 
 #: ../plugins/separator/separator.c:293
 msgid "_Expand"
-msgstr ""
+msgstr "_Laajenna"
 
 #: ../plugins/showdesktop/showdesktop.c:63
 msgid "Restore hidden windows"
-msgstr ""
+msgstr "Palauta piilotetut ikkunat"
 
 #: ../plugins/showdesktop/showdesktop.c:64
 msgid "Hide windows and show desktop"
-msgstr ""
+msgstr "Piilota ikkunat ja näytä työpöytä"
 
 #: ../plugins/systray/systray.c:65
 msgid "There is already a system tray running on this screen"
@@ -556,21 +535,20 @@ msgstr "Järjestelmälokeron rekisteröinti ei onnistu: %s"
 #: ../plugins/systray/systray.c:376
 #: ../plugins/systray/systray.desktop.in.in.h:2
 msgid "System Tray"
-msgstr ""
+msgstr "Järjestelmälokero"
 
 #: ../plugins/tasklist/tasklist.c:414 ../plugins/tasklist/tasklist.c:467
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:2
-#, fuzzy
 msgid "Task List"
 msgstr "Tehtävälista"
 
 #: ../plugins/tasklist/tasklist.c:439
 msgid "Minimum Width:"
-msgstr ""
+msgstr "Vähimmäisleveys:"
 
 #: ../plugins/tasklist/tasklist.c:454
 msgid "Use all available space"
-msgstr ""
+msgstr "Käytä kaikki käytettävissä oleva tila"
 
 #: ../plugins/tasklist/tasklist.c:471
 msgid "Show tasks from _all workspaces"
@@ -581,55 +559,50 @@ msgid "Show application _names"
 msgstr "Näytä sovellusten _nimet"
 
 #: ../plugins/tasklist/tasklist.c:495
-#, fuzzy
 msgid "Never group tasks"
-msgstr "_Ryhmitä tehtävät aina"
+msgstr "Älä koskaan ryhmitä tehtäviä"
 
 #: ../plugins/tasklist/tasklist.c:498
-#, fuzzy
 msgid "Automatically group tasks"
-msgstr "_Ryhmitä tehtävät aina"
+msgstr "Ryhmitä tehtävät automaattisesti"
 
 #: ../plugins/tasklist/tasklist.c:501
-#, fuzzy
 msgid "Always group tasks"
-msgstr "_Ryhmitä tehtävät aina"
+msgstr "Ryhmitä tehtävät aina"
 
 #: ../plugins/windowlist/windowlist.c:249
 #: ../plugins/windowlist/windowlist.c:480
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:2
 msgid "Window List"
-msgstr ""
+msgstr "Ikkunalista"
 
 #: ../plugins/windowlist/windowlist.c:348
 msgid "Add workspace"
-msgstr ""
+msgstr "Lisää työtila"
 
 #: ../plugins/windowlist/windowlist.c:358
 msgid "Delete workspace"
-msgstr ""
+msgstr "Poista työtila"
 
 #: ../plugins/windowlist/windowlist.c:493
 msgid "Include all Workspaces"
-msgstr ""
+msgstr "Näytä kaikki työtilat"
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
 msgid "Action Buttons"
-msgstr ""
+msgstr "Toimintapainikkeet"
 
 #: ../plugins/actions/actions.desktop.in.in.h:2
-#, fuzzy
 msgid "Log out or lock the screen"
-msgstr "Lukitse näyttö"
+msgstr "Kirjaudu ulos tai lukitse näyttö"
 
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
-msgstr ""
+msgstr "Paljonko kello on?"
 
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:2
-#, fuzzy
 msgid "Show icons of all running applications"
-msgstr "Näytä vain _pienennetyt sovellukset"
+msgstr "Näytä käynnissä olevien sovellusten kuvakkeet"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:1
 msgid "Launcher"
@@ -637,49 +610,44 @@ msgstr "Käynnistin"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:2
 msgid "Program launcher with optional menu"
-msgstr ""
+msgstr "Sovelluskäynnistin, johon voi liittää valikon"
 
 #: ../plugins/pager/pager.desktop.in.in.h:1
 msgid "Miniature view of all virtual desktops"
-msgstr ""
+msgstr "Kaikkien virtuaalisten työpöytien pienoisnäkymä"
 
 #: ../plugins/separator/separator.desktop.in.in.h:1
 msgid "Adds a space or a line between panel items"
-msgstr ""
+msgstr "Lisää tyhjää tilaa tai viiva paneelin osien väliin"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:1
 msgid "Show Desktop"
-msgstr ""
+msgstr "Näytä työpöytä"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:2
 msgid "Toggle desktop show/hide"
-msgstr ""
+msgstr "Näytä tai piilota työpöytä"
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
-#, fuzzy
 msgid "Show notification icons"
-msgstr "Näytä _järjestelmäkuvakkeet"
+msgstr "Näytä järjestelmäkuvakkeet"
 
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
-#, fuzzy
 msgid "Show all running applications"
-msgstr "Näytä vain _pienennetyt sovellukset"
+msgstr "Näytä kaikki käynnissä olevat sovellukset"
 
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:1
 msgid "Show list of available windows"
-msgstr ""
+msgstr "Näytä lista käytettävissä olevista ikkunoista"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:1
-#, fuzzy
 msgid "Test Plugin"
-msgstr "Käynnistin-liitännäinen"
+msgstr "Testiliitännäinen"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:2
 msgid "This plugin has no purpose"
-msgstr ""
+msgstr "Tällä liitännäisellä ei ole käyttötarkoitusta"
 
+#, fuzzy
 #~ msgid "New item"
 #~ msgstr "Uusi osa"
-
-#~ msgid "Status Area"
-#~ msgstr "Tila-alue"
