--- a/po/pt_PT.po
+++ b/po/pt_PT.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-12-19 19:30+0100\n"
-"PO-Revision-Date: 2007-06-14 19:41+0100\n"
+"PO-Revision-Date: 2007-09-03 17:36+0100\n"
 "Last-Translator: Nuno Miguel <nunis@netcabo.pt>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,7 +18,7 @@ msgstr ""
 
 #: ../config/launcher-7.rc.in.h:1
 msgid "Command Prompt"
-msgstr "Comando:"
+msgstr "Linha de Comando"
 
 #: ../config/launcher-7.rc.in.h:2
 msgid "X terminal emulator"
@@ -47,7 +47,7 @@ msgstr "Navegar na Internet"
 
 #: ../config/launcher-10.rc.in.h:2
 msgid "Web Browser"
-msgstr "Navegador de Ajuda"
+msgstr "Navegador Web"
 
 #. dialogs are annoying, just spit out a warning
 #: ../libxfce4panel/xfce-panel-external-item.c:175
@@ -283,7 +283,7 @@ msgstr "Vertical"
 
 #: ../panel/panel-dialogs.c:1147
 msgid "Handle:"
-msgstr "Manipulador"
+msgstr "Manipulador:"
 
 #: ../panel/panel-dialogs.c:1159
 msgid "At both sides"
@@ -332,7 +332,7 @@ msgstr "Novo Painel"
 #: ../panel/panel-dialogs.c:1610
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:2
 msgid "Panel Manager"
-msgstr "Gestor do Painel:"
+msgstr "Gestor do Painel"
 
 #: ../plugins/actions/actions.c:261
 #: ../plugins/actions/actions.c:297
@@ -480,7 +480,7 @@ msgstr "Impressora"
 
 #: ../plugins/launcher/launcher-dialog.c:111
 msgid "Productivity"
-msgstr "Productividade"
+msgstr "Produtividade"
 
 #: ../plugins/launcher/launcher-dialog.c:112
 msgid "Office"
@@ -500,11 +500,11 @@ msgstr "Desenvolvimento"
 
 #: ../plugins/launcher/launcher-dialog.c:413
 msgid "Select image file"
-msgstr "Seleccione o ficheiro de imagem"
+msgstr "Seleccionar ficheiro de imagem"
 
 #: ../plugins/launcher/launcher-dialog.c:459
 msgid "Select command"
-msgstr "Seleccione o comando"
+msgstr "Seleccionar comando"
 
 #: ../plugins/launcher/launcher-dialog.c:482
 msgid "Name"
@@ -520,7 +520,7 @@ msgstr "Outro..."
 
 #: ../plugins/launcher/launcher-dialog.c:653
 msgid "Command"
-msgstr "Comando:"
+msgstr "Comando"
 
 #: ../plugins/launcher/launcher-dialog.c:689
 msgid "Run in _terminal"
@@ -558,12 +558,12 @@ msgstr "A Zero Install GUI terminou, mas o diálogo do lançador terminou. O lan
 
 #: ../plugins/launcher/launcher-dialog.c:1899
 msgid "Select file"
-msgstr "Seleccione o ficheiro"
+msgstr "Seleccionar ficheiro"
 
 #: ../plugins/pager/pager.c:336
 #: ../plugins/pager/pager.desktop.in.in.h:2
 msgid "Pager"
-msgstr "Alternador de Areas de Trabalho"
+msgstr "Paginador"
 
 #: ../plugins/pager/pager.c:364
 msgid "Number of rows:"
@@ -571,7 +571,7 @@ msgstr "Número de linhas:"
 
 #: ../plugins/pager/pager.c:368
 msgid "Number of columns:"
-msgstr "Número de colunas"
+msgstr "Número de colunas:"
 
 #: ../plugins/pager/pager.c:394
 msgid "Switch workspaces using the mouse wheel"
@@ -601,7 +601,7 @@ msgstr "Ocultar janelas e mostrar ambiente de trabalho"
 #: ../plugins/systray/systray.c:69
 #: ../plugins/systray/systray.c:84
 msgid "There is already a system tray running on this screen"
-msgstr "Já existe uma area de notificação a correr neste ecrã"
+msgstr "Já existe uma área de notificação a correr neste ecrã"
 
 #: ../plugins/systray/systray.c:90
 #, c-format
@@ -621,7 +621,7 @@ msgstr "Lista de Tarefas"
 
 #: ../plugins/tasklist/tasklist.c:439
 msgid "Minimum Width:"
-msgstr "Largura mínima"
+msgstr "Largura mínima:"
 
 #: ../plugins/tasklist/tasklist.c:463
 msgid "Use flat buttons"
@@ -691,7 +691,7 @@ msgstr "<i>Notificação de urgência</i> o botão irá piscar quando uma aplica
 #. Button Urgency Notification
 #: ../plugins/windowlist/windowlist-dialog.c:154
 msgid "Urgency Notification"
-msgstr "Usar notificação de arranque"
+msgstr "Notificação de Urgência"
 
 #: ../plugins/windowlist/windowlist-dialog.c:161
 msgid "_Disabled"
@@ -707,7 +707,7 @@ msgstr "Para _todas as Áreas de Trabalho"
 
 #: ../plugins/windowlist/windowlist-dialog.c:193
 msgid "_Icon button"
-msgstr "Botão de _ícone"
+msgstr "Botão de í_cone"
 
 #: ../plugins/windowlist/windowlist-dialog.c:200
 msgid "A_rrow button"
@@ -715,7 +715,7 @@ msgstr "Botão em s_eta"
 
 #: ../plugins/windowlist/windowlist-dialog.c:218
 msgid "Show _windows from all workspaces"
-msgstr "Mostrar as tarefas de _todas as Áreas de Trabalho"
+msgstr "Mostrar janelas de _todas as Áreas de Trabalho"
 
 #: ../plugins/windowlist/windowlist-dialog.c:227
 msgid "Show a_pplication icons"
@@ -763,7 +763,7 @@ msgstr "Adicionar espaço ou linha entre os itens do painel"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:1
 msgid "Show Desktop"
-msgstr "Mostra Ambiente de trabalho"
+msgstr "Mostrar Ambiente de trabalho"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:2
 msgid "Toggle desktop show/hide"
@@ -779,11 +779,11 @@ msgstr "Mostrar todas as aplicações em execução"
 
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:1
 msgid "Show list of available windows"
-msgstr "Mostrar lista de janelas"
+msgstr "Mostrar lista de janelas disponíveis"
 
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
 msgid "Xfce 4 Panel Manager"
-msgstr "Gestor do Painel Xfce 4:"
+msgstr "Gestor do Painel Xfce 4"
 
 #, fuzzy
 #~ msgid "Test Plugin"
